# m1saka

./: .gitignore  Cargo.toml  README.md  aarch64-mary-none.json  link.ld  run_m1saka.sh  rust-toolchain
.cargo/: config
src/: exception_vectors.rs  logger.rs  main.rs  memory.rs  mmu.rs  rt.rs  utils.rs
src/m1/: uart.rs
src/m1_hal/: mod.rs
src/m1n1/: mod.rs
