[package]
name = "m1_playground"
version = "0.1.0"
authors = ["Mary <me@thog.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
register = "0.3.2"
static_assertions = "*"
enum_primitive = { git = "https://github.com/roblabla/enum_primitive-rs.git", branch = "master"}

[dependencies.num-traits]
version = "0.2"
default-features = false